changed to mvc pattern
